--- a/index.html
+++ b/index.html
@@ -66,14 +66,7 @@
       <li><a class="dropdown-item" href="#">Dropdown link</a></li>
       <li><a class="dropdown-item" href="#">Dropdown link</a></li>
     </ul>
-
-
   </div>
-
-
-
-
-
 <div class="col-md-6"><img class="img-first" src="resimler/Group 71.png" alt=""> </div>
 </div>
 
@@ -148,7 +141,7 @@
 <div class="col-md-7"><img class="b-image order-1 order-xl-2" src="resimler/Group 68.png" alt=""></div>
 </div>
 </section>
-<section class="safe-image ortalama">
+<section class="safe-image ">
 <div class="row">
 <div class="col-md-8"><img class="safe-mobile" src="resimler/11 2.png" alt=""> </div>
 
