--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header> 
   <div class="nav-plan"> 
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid ">
@@ -69,34 +70,119 @@
   </div>
 <div class="col-md-6"><img class="img-first" src="resimler/Group 71.png" alt=""> </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
-
+</header>
+<section class="s-table"> 
+    <div class="first-table">
+    <div class="row">
+    <div class="col-md-4"> 
+    <div class="first-1"> </div>
+    <div class="first-head">
+    <div> 🔥 Trending </div>
+    <a class="link text-decoration-none" href="#"> More > </a>
+    </div>
+    <div class=""> 
+    <div class="row">
+    <div class="col-md-4 third"> Name</div>
+    <div class="col-md-4 third"> Price</div>
+    <div class="col-md-4 third"> Chart</div>
+    <div class="col-md-4 name "><img class="bt-1" src="resimler/bitcoin.png" alt=""> Bitcoin </div>
+    <div class="col-md-4 price "> <span class="plus">+</span> $43,180.13</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart1.png" alt=""></div>
+    <div class="col-md-4 d-flex name "><img class="bt-1" src="resimler/siyah.png" alt=""> Ethereum </div>
+    <div class="col-md-4 price "> <span class="minus">-</span>$3,480.65</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart2.png" alt=""></div>
+    <div class="col-md-4 name "><img class="bt-1" src="resimler/mor.png" alt=""> Solana</div>
+    <div class="col-md-4 price "> <span class="plus">+</span> $150,20</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart3.png" alt=""></div>
+    <div class="col-md-4 name d-flex "><img class="bt-1" src="resimler/image 1 (1).png" alt=""> Dogecoin</div>
+    <div class="col-md-4 price "> <span class="plus">+</span>$0,1572</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart4.png" alt=""></div>
+    </div>
+    </div>
+    </div>
+    <div class="col-md-4"><div class="first-1"> </div>
+    <div class="first-head">
+    <div> 🚀  Top Gainers </div>
+    <a class="link text-decoration-none" href="#"> More > </a>
+    </div>
+    <div class=""> 
+    <div class="row">
+    <div class="col-md-4 third"> Name</div>
+    <div class="col-md-4 third"> Price</div>
+    <div class="col-md-4 third"> Chart</div>
+    <div class="col-md-4 name "><img class="bt-1" src="resimler/pay.png" alt=""> PAPPAY</div>
+    <div class="col-md-4 price "> <span class="plus">+</span> $0.00374</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart5.png" alt=""></div>
+    <div class="col-md-4 d-flex name"><img class="bt-1 d-flex" src="resimler/asia.png" alt=""> <span class="asia">Bitcoin Asia</span></div>
+    <div class="col-md-4 price "> <span class="plus">+</span>$0.02096</div>
+    <div class="col-md-4 chart"> <img src="resimler/chart6.png" alt=""></div>
+    <div class="col-md-4 name d-flex"><img class="bt-1" src="resimler/moon.png" alt=""> MoonRock</div>
+    <div class="col-md-4 price "> <span class="plus">+</span>$0.004907</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart7.png" alt=""></div>
+    <div class="col-md-4 name d-flex "><img class="bt-1" src="resimler/floki.png" alt=""> NinjaFloki</div>
+    <div class="col-md-4 price "> <span class="plus">+</span>$0.000123</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart8.png" alt=""></div>
+    </div>
+    </div></div>
+    <div class="col-md-4"><div class="first-1"> </div>
+    <div class="first-head">
+    <div> 💎  Recently Added </div>
+    <a style="padding-right: 15px;" class="link text-decoration-none" href="#"> More > </a>
+    </div>
+    <div class=""> 
+    <div class="row">
+    <div class="col-md-4 third"> Name</div>
+    <div class="col-md-4 third"> Price</div>
+    <div class="col-md-4 third"> Chart</div>
+    <div class="col-md-4 name d-flex "><img class="bt-1" src="resimler/meta.png" alt=""> Metacraft</div>
+    <div class="col-md-4 price "> <span class="minus">-</span> $0.0608</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart9.png" alt=""></div>
+    <div class="col-md-4 d-flex name "><img class="bt-1" src="resimler/frog.png" alt=""> Frog</div>
+    <div class="col-md-4 price "> <span class="minus">-</span>$0.5875</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart10.png" alt=""></div>
+    <div class="col-md-4 name d-flex"><img class="bt-1" src="resimler/musk.png" alt="">Musk Doge</div>
+    <div class="col-md-4 price "> <span class="plus">+</span>$0.04041</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart11.png" alt=""></div>
+    <div class="col-md-4 name d-flex "><img class="bt-1" src="resimler/SHARE.png" alt="">2SHARE</div>
+    <div class="col-md-4 price "> <span class="plus">+</span>$1,366.24</div>
+    <div class="col-md-4 chart "> <img src="resimler/chart12.png" alt=""></div>
+    </div>
+    </div></div>  
+    </div>
+    </div>
+</section>
+<section class="buy-bosluk"> 
+  <div class="">
+  <div class="row">
+  <div class="col-md-7"> <div class="trade"> Buy & trade on the<br>
+    original crypto exchange.</div>
+  <div class="exstra"> Buy now and get 40% extra bonus Minimum pre-sale amount <br>25 Crypto Coin. We accept BTC crypto-currency</div> 
+  <form class="trade-alt"> <div class="aps-1"> <label for="exampleInputEmail1" class="form-label">Amount</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="5,000">
+    <select class="form-select " aria-label="Default select example">
+      <option selected><img src="frog.png" alt="">USD</option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
+  </div>
+  <form class="trade-alt"> <div class="aps-1"> <label for="exampleInputEmail1" class="form-label">Amount</label>
+    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="5,000">
+    <select class="form-select form-select-lg mb-3" aria-label="Large select example"><img src="resimler/Ellipse 13.png" alt="">
+      <option selected></option>
+      <option value="1">One</option>
+      <option value="2">Two</option>
+      <option value="3">Three</option>
+    </select>
+  </div>
+  </form>
+  <button type="button" class="btn btn-primary buy-buton btn-lg">Buy Now</button>
+  </div>
+  <div class="col-md-5"><img class="buy-image" src="resimler/buy.png" alt=""></div> 
+  </div>
+  </div>
+  </section>
 <section class="trusted"> 
 <div class="container">
 <div class="partners">Trusted Partners Worldwide</div>
@@ -243,7 +329,7 @@
 <div class="countainer"> 
 <div class="row"> 
 <div class="col-md-2"> <img class="logo-son" src="resimler/Group 1 (1).png" alt=""> </div>
-<div class="col-md-2 shadow-1">
+<div class="col-md-2">
   <ul style="list-style-type:none;">
     <li>Buy Crypto </li>
     <li>Exchanges</li>
@@ -252,20 +338,20 @@
     <li>NFT</li>
     </ul> 
 </div>
-<div class="col-md-2 shadow-1">  <ul style="list-style-type:none;">
+<div class="col-md-2">  <ul style="list-style-type:none;">
   <li>Buy Crypto </li>
   <li>Exchanges</li>
   <li>Watchlist</li>
   <li>Portfolio</li>
   <li>NFT</li>
   </ul> </div>
-<div class="col-md-2 shadow-1"> <ul class="" style="list-style-type:none;">
+ <div class="col-md-2"> <ul class="" style="list-style-type:none;">
   <li>Buy Crypto </li>
   <li>Exchanges</li>
   <li>Watchlist</li>
   <li>Portfolio</li>
   <li>NFT</li>
-  </ul style="list-style-type:none;">  </div>
+  </ul>  </div>
 <div class="col-md-4 bsk"> 
 <div class="newes"> Newsletter</div>
 <div class="never"> Never miss anything crypto when<br> you're on the go</div>
@@ -282,13 +368,9 @@
 </div>
 </div>
 </footer>
-
-
-
-
-
-
-
+<footer>
+<div class="copy">© Copyright 2022 NEFA LLC. All rights reserved</div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
