--- a/index.html
+++ b/index.html
@@ -153,36 +153,36 @@
     </div>
 </section>
 <section class="buy-bosluk"> 
-  <div class="">
-  <div class="row">
-  <div class="col-md-7"> <div class="trade"> Buy & trade on the<br>
-    original crypto exchange.</div>
-  <div class="exstra"> Buy now and get 40% extra bonus Minimum pre-sale amount <br>25 Crypto Coin. We accept BTC crypto-currency</div> 
-  <form class="trade-alt"> <div class="aps-1"> <label for="exampleInputEmail1" class="form-label">Amount</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="5,000">
-    <select class="form-select " aria-label="Default select example">
-      <option selected><img src="frog.png" alt="">USD</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
+<div class="row">
+<div class="col-md-6">
+<div class="trade"> Buy & trade on the<br>
+  original crypto exchange.</div>
+<div class="exstra"> Buy now and get 40% extra bonus Minimum pre-sale amount <br>25 Crypto Coin. We accept BTC crypto-currency</div> 
+<form class="trade-alt"> <div class="aps-1"> <label for="exampleInputEmail1" class="form-label">Amount</label>
+  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="5,000"> 
+    <button type="button" class="btn btn-outline-secondary buy-down  dropdown-toggle-1 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+     <img src="resimler/Ellipse 13.png" alt=""> USD
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+      <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+    </ul>
   </div>
   <form class="trade-alt"> <div class="aps-1"> <label for="exampleInputEmail1" class="form-label">Amount</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="5,000">
-    <select class="form-select form-select-lg mb-3" aria-label="Large select example"><img src="resimler/Ellipse 13.png" alt="">
-      <option selected></option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
+    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" value="5,000"> 
+      <button type="button" class="btn btn-outline-secondary buy-down  dropdown-toggle-1 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+       <img src="resimler/bitcoin.png" alt=""> USD
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+      </ul>
+    </div>
+    <button type="button" class="btn btn-primary buy-buton ">Buy Now</button>
   </div>
-  </form>
-  <button type="button" class="btn btn-primary buy-buton btn-lg">Buy Now</button>
-  </div>
-  <div class="col-md-5"><img class="buy-image" src="resimler/buy.png" alt=""></div> 
-  </div>
-  </div>
-  </section>
+<div class="col-md-6" ><img class="buy-image" src="resimler/buy.png" alt=""> </div>
+</div>
+</section>
 <section class="trusted"> 
 <div class="container">
 <div class="partners">Trusted Partners Worldwide</div>
@@ -328,8 +328,8 @@
 <footer class="alt-1">
 <div class="countainer"> 
 <div class="row"> 
-<div class="col-md-2"> <img class="logo-son" src="resimler/Group 1 (1).png" alt=""> </div>
-<div class="col-md-2">
+<div class="col-md-3"> <img class="logo-son" src="resimler/Group 1 (1).png" alt=""> </div>
+<div class="col-md-2 colss sha">
   <ul style="list-style-type:none;">
     <li>Buy Crypto </li>
     <li>Exchanges</li>
@@ -338,30 +338,28 @@
     <li>NFT</li>
     </ul> 
 </div>
-<div class="col-md-2">  <ul style="list-style-type:none;">
+<div class="col-md-2 colss sha">  <ul style="list-style-type:none;">
   <li>Buy Crypto </li>
   <li>Exchanges</li>
   <li>Watchlist</li>
   <li>Portfolio</li>
   <li>NFT</li>
   </ul> </div>
- <div class="col-md-2"> <ul class="" style="list-style-type:none;">
+ <div class="col-md-2 colss sha"> <ul class="" style="list-style-type:none;">
   <li>Buy Crypto </li>
   <li>Exchanges</li>
   <li>Watchlist</li>
   <li>Portfolio</li>
   <li>NFT</li>
   </ul>  </div>
-<div class="col-md-4 bsk"> 
+<div class="col-md-3 colss bsk"> 
 <div class="newes"> Newsletter</div>
 <div class="never"> Never miss anything crypto when<br> you're on the go</div>
 <form class="row g-3">
   <div class="col-auto">
     <label for="inputPassword2" class="visually-hidden"></label>
-    <input type="password" class="form-control" id="inputPassword2" placeholder="Enter your email">
-  </div>
-  <div class="col-auto">
-    <button type="submit" class="btn sub-1 btn-primary mb-3"><i class="bi bi-arrow-right-short"></i></button>
+    <input type="password" class="form-control" id="inputPassword2" placeholder="Enter your email">  
+      <button type="submit" class="btn sub-1 btn-primary"><i class="bi bi-arrow-right-short"></i></button>
   </div>
 </form>
 </div>
